--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>My test page</title>
   </head>
   <body>
+    <h1>More About Mozilla</h1>
     <img src="images/firefox_PNG1.png" alt="My test image" />
+    <p>At Mozilla, we're a global community of</p>
+    <ul>
+        <li>technologists</li>
+        <li>thinkers</li>
+        <li>builders</li>
+    </ul>
+    <p>working together to keep the internet alive and accessible, so people worlwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future. </p>
+    <a href="https://www.mozilla.org/en-US/about/manifesto/">
+        Mozilla Manifesto
+      </a>
+    
   </body>
 </html>
