--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>More About Mozilla</h1>
-    <img src="images/firefox_PNG1.png" alt="My test image" />
+    <img src="images/mozilla-firefox-logo-png-mozilla-firefox-new-logo-hd-png-img-transparent-png-image-860x897.png" alt="My test image" />
     <p>At Mozilla, we're a global community of</p>
     <ul>
         <li>technologists</li>
@@ -15,9 +15,10 @@
         <li>builders</li>
     </ul>
     <p>working together to keep the internet alive and accessible, so people worlwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future. </p>
-    <a href="https://www.mozilla.org/en-US/about/manifesto/">
+    
+    <p>Read the<a href="https://www.mozilla.org/en-US/about/manifesto/">
         Mozilla Manifesto
-      </a>
+      </a>to learn even more about the values and prinicples that guide the pursuit of our mission.</p>
     
   </body>
 </html>
